Fix category filter list width jumping/widening on showing options.

--- a/Resources/Public/Themes/elegance/hamag.css
+++ b/Resources/Public/Themes/elegance/hamag.css
@@ -93,7 +93,7 @@
         position: fixed;
         right: 0;
         top: 20pt;
-        min-width: 214px;
+        width: 214px;
     }
     .catalog-filter-attribute fieldset
     {
